--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -493,7 +493,8 @@
     margin: 0px !important;
 }
 .trattTools{
-	padding-right:45px !important;
+	/*padding-right:45px !important;*/
+	padding-right:40px !important;
 }
 .cartella:not(.cartellaSingoli) .trattTools{
 	background:#FFF !important;/*#c88f1d !important; /*#789e33 !important;/*#999 !important;*/
@@ -511,11 +512,15 @@
 	cursor:pointer;
 	display: inline-block;
 	float:right;
-	border-radius: 4px;
+	/*border-radius: 4px;*/
 }
 .trattTools i:not(.addTrattBtn){
-	line-height: 27px !important;
-	height:27px !important;
+	/*line-height: 27px !important;
+	height:27px !important;*/
+	line-height: 32px !important;
+    height: 32px !important;
+    margin-top: -3px;
+    width: 48px;
 }
 .smart.android .trattTools i{
 	width: 44px !important;
@@ -528,15 +533,19 @@
 body:not(.smart) .trattTools i{
 	opacity:0.5;
 }
+body:not(.smart) .trattTools i:not(.infoCiclo):not(.addTrattBtn):hover{
+	background-color:#EEE !important;
+}
 .trattTools i:not(.infoCiclo):hover,
 .trattTools i.elencoSel{
 	opacity:1 !important;
 }
-.anamnesiBtn,
+.anamnesiBtn{
+	background-repeat:no-repeat;
+}
 .riepilogoBtn{
 	background-repeat:no-repeat;
-	background-position:top center, center center;
-	width:28px;
+	background-position:center center, center center;
 }
 .smart.android .riepilogoBtn{
 	background-position:center center, center center !important;
@@ -568,7 +577,7 @@ body:not(.smart) .trattTools i{
 	margin-top: -44px;
 }
 .anamnesiBtn:hover{
-    background-color: #fae6d1 !important;
+    background-color: #EEE !important;
 }
 .anamnesiBtn span{
 	display: inline !important;
