--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -497,6 +497,9 @@ body:not(.bodyStyled2) #chiudiElenco{
     text-overflow: ellipsis;
 	cursor:pointer;
 }
+.cartelle > div:not(#titCartelle) > div:hover{
+	background-color:#eee;
+}
 #titCartelle{
 	color:#FFF;
     height: 32px;
