Aggiustamenti alla gestione delle sigle dei meridiani e aggiunta funzione che apre e chiude i meridiani della scheda attiva

--- a/css/menu.css
+++ b/css/menu.css
@@ -364,6 +364,16 @@ body:not(.smart) #p_rifletti{
 	opacity:0.5 !important;
 }
 
+.smart #p_liv_muscoli,
+.smart #p_liv_ossa,
+.smart #p_liv_visceri,
+.smart #p_liv_pelle{
+	display:none !important;
+	position:fixed !important;
+	left:-500px !important;
+	height:0px !important;
+	width:0px !important;
+}
 
 
 body #p_impostazioniAM{
